# bevy_try

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
examples/: balls.rs  bevy_snake.rs  custom_scene.rs  hello_examples.rs  jobs.rs  million_tank.rs
examples/2d/: 2d_shapes.rs  mesh2d.rs  rapier2d.rs  rotation.rs  text2d.rs
examples/3d/: 3d_scene.rs  3d_shapes.rs  rapier3d.rs  skybox.rs
examples/3rd_tutorial/: camera.rs  main.rs  player.rs  world.rs
examples/ball-game/: main.rs
examples/bevy-ball-game/: fonts.rs  game.rs  main.rs  main_menu.rs  player.rs  score.rs  star.rs  systems.rs
examples/bevy-ball-game/enemy/: systems.rs
examples/bevy-ball-game/game/: enemy.rs  player.rs  score.rs  star.rs  systems.rs  ui.rs
examples/bevy-ball-game/game/enemy/: systems.rs
examples/bevy-ball-game/game/player/: systems.rs
examples/bevy-ball-game/game/score/: systems.rs
examples/bevy-ball-game/game/star/: systems.rs
examples/bevy-ball-game/game/ui/: game_over_menu.rs  hud.rs  pause_menu.rs
examples/bevy-ball-game/game/ui/game_over_menu/: components.rs  styles.rs
examples/bevy-ball-game/game/ui/hud/: styles.rs
examples/bevy-ball-game/game/ui/pause_menu/: components.rs  styles.rs
examples/bevy-ball-game/main_menu/: styles.rs
examples/bevy-ball-game/main_menu/systems/: interactions.rs  layout.rs
examples/bevy-ball-game/player/: systems.rs
examples/bevy-ball-game/star/: resources.rs  systems.rs
examples/chess_clone/: main.rs
src/: main.rs
src/examples/2D/: 2d_shapes.rs  rotation.rs
(+7 files in other folders)
