[package]
name = "bevy_try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }

[[example]]
name = "hello_examples"
path = "src/examples/hello_examples.rs"

[[package.metadata.example.hello_examples]]
hidden = true

[[example]]
name = "rotation"
path = "src/examples/2d/rotation.rs"

[package.metadata.example.rotation]
name = "2D Rotation"
description = "Demonstrates rotating entities in 2D with quaternions"
category = "2D Rendering"
wasm = true

[[example]]
name = "2d_shapes"
path = "src/examples/2d/2d_shapes.rs"

[package.metadata.example.2d_shapes]
name = "2D Shapes"
description = "Renders a rectangle, circle, and hexagon"
category = "2D Rendering"
wasm = true
